--- a/client/src/components/molecules/footer/Footer.css
+++ b/client/src/components/molecules/footer/Footer.css
@@ -1,6 +1,7 @@
 .main-footer {
     color: rgb(10, 1, 1);
-    background-color: #ebadb3;
+    background-color: #ff96ad;
+    ;
     padding-top: 3em;
     position: relative;
     bottom: 0;
