done rapihin tampilannya

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;600&display=swap');
-
-$primarycolor:#ff96ad;
-$secondarycolor :#005a8d;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,600&display=swap');
+$primarycolor:#94d0cc;
 
 *{
     margin: 0;
